# api_test

./: .gitignore  Dockerfile  README.md  app.js  conftest.py  docker-compose.yml  entrypoint.sh  index.html  logger.py  login.html  login.js  main.py  pyproject.toml  setup.py
frontend/: app.js  auth.js  index.html  login.js  style.css
sql/: schema.sql
src/: db.py  dependencies.py  main.py  repository.py
src/models/: item.py  user.py
src/routers/: auth.py  items.py
src/schemas/: items.py  user.py
src/services/: auth.py  items.py
tests/: endpoint_tests.py  test_items.py
