[project]
name = "api-test"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.33.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]